--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,3 +26,8 @@ jobs:
           restore-keys: ${{ runner.os }}-m2
       - name: Build
         run: mvn -B verify
+      - name: Upload artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: JARs
+          path: ./target/CoreProtect*.jar
